// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnginesManagement with enginesDeleteSuccess renders correctly 1`] = `
<o
  bottombar={
    <p
      backToTopLabel="Haut de page"
    />
  }
  titlebar={
    <withRouter(TitleBar)
      actions={
        Array [
          Object {
            "href": "/engines/create",
            "icon": Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "displayName": "AddBoxIcon",
              "muiName": "SvgIcon",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
            },
            "id": "new_engine_button",
            "label": "CRÉER UN MOTEUR DE RECHERCHE",
            "size": "large",
          },
        ]
      }
      title="GESTION DES MOTEURS DE RECHERCHE"
    />
  }
>
  <DataGrid
    actions={
      Array [
        Object {
          "color": "quaternary",
          "disabled": true,
          "icon": Object {
            "$$typeof": Symbol(react.memo),
            "compare": null,
            "displayName": "DeleteIcon",
            "muiName": "SvgIcon",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "label": "Supprimer les moteurs sélectionnés",
          "onClick": [Function],
        },
      ]
    }
    rowCount={19}
    rows={Array []}
  />
  <DeleteEnginesConfirmationModal
    open={false}
    toggle={[Function]}
  />
  <ServerActionBackdrop />
</o>
`;

exports[`EnginesManagement with errorMessage renders correctly 1`] = `
<o
  bottombar={
    <p
      backToTopLabel="Haut de page"
    />
  }
  titlebar={
    <withRouter(TitleBar)
      actions={
        Array [
          Object {
            "href": "/engines/create",
            "icon": Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "displayName": "AddBoxIcon",
              "muiName": "SvgIcon",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
            },
            "id": "new_engine_button",
            "label": "CRÉER UN MOTEUR DE RECHERCHE",
            "size": "large",
          },
        ]
      }
      title="GESTION DES MOTEURS DE RECHERCHE"
    />
  }
>
  <DataGrid
    actions={
      Array [
        Object {
          "color": "quaternary",
          "disabled": true,
          "icon": Object {
            "$$typeof": Symbol(react.memo),
            "compare": null,
            "displayName": "DeleteIcon",
            "muiName": "SvgIcon",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "label": "Supprimer les moteurs sélectionnés",
          "onClick": [Function],
        },
      ]
    }
    rowCount={19}
    rows={Array []}
  />
  <DeleteEnginesConfirmationModal
    open={false}
    toggle={[Function]}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="success"
    >
      La séléction a bien été supprimée
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
  <ServerActionBackdrop />
</o>
`;

exports[`EnginesManagement with no Snackbar renders correctly 1`] = `
<o
  bottombar={
    <p
      backToTopLabel="Haut de page"
    />
  }
  titlebar={
    <withRouter(TitleBar)
      actions={
        Array [
          Object {
            "href": "/engines/create",
            "icon": Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "displayName": "AddBoxIcon",
              "muiName": "SvgIcon",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
            },
            "id": "new_engine_button",
            "label": "CRÉER UN MOTEUR DE RECHERCHE",
            "size": "large",
          },
        ]
      }
      title="GESTION DES MOTEURS DE RECHERCHE"
    />
  }
>
  <DataGrid
    actions={
      Array [
        Object {
          "color": "quaternary",
          "disabled": true,
          "icon": Object {
            "$$typeof": Symbol(react.memo),
            "compare": null,
            "displayName": "DeleteIcon",
            "muiName": "SvgIcon",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
          },
          "label": "Supprimer les moteurs sélectionnés",
          "onClick": [Function],
        },
      ]
    }
    rowCount={19}
    rows={Array []}
  />
  <DeleteEnginesConfirmationModal
    open={false}
    toggle={[Function]}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="error"
    >
      ERROR
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
  <ServerActionBackdrop />
</o>
`;
